# ve

./: CHANGELOG.rst  README.rst  setup.cfg  setup.py
src/ve/: _core.py  _meta.py  cli.py
test/: test_unit.py
