#


[check]
metadata = 1
strict = 1


[metadata]
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = ve application
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
name = ve
project_urls =
    GitLab = https://gitlab.com/sinoroc/ve
    GitHub = https://github.com/sinoroc/ve
url = https://pypi.org/project/ve/


[options]
install_requires =
    importlib_metadata
package_dir =
    = src
packages = find:


[options.entry_points]
console_scripts =
    ve = ve.cli:main


[options.extras_require]
package =
    pex
    twine
    wheel
test =
    pytest
    pytest-pycodestyle
    pytest-pylint


[options.packages.find]
where = src


[tool:pytest]
addopts =
    --pylint-error-types='CEFIRW'


# EOF
